--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -54,6 +54,7 @@
 
 .list span {
     font-size: 20px;
+    color: #3e497a;
 }
 
 @media only screen and (max-width: 600px) {
@@ -76,4 +77,5 @@
 }
 .skills h2 {
     font-size: 30px;
+    color: #3e497a;
 }
