--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -25,13 +25,15 @@
 
 .about .prompt {
     width: 40%;
-    font-size: 30px;
+    font-size: 50px;
+    color: aliceblue;
 }
 
 .prompt svg {
     font-size: 60px;
     margin: 5px;
     color: white;
+    cursor: pointer;
 }
 
 .skills {
