--- a/src/styles/ProjectDisplay.css
+++ b/src/styles/ProjectDisplay.css
@@ -1,6 +1,7 @@
 .project {
   width: 100%;
-  height: calc(100vh - 100px);
+  /* height: calc(100vh - 100px); */
+  height: auto;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -13,13 +14,14 @@
   font-size: 35px;
 }
 .project img {
-  width: 700px;
-  height: 400px;
+  width:100%;
+  display: flex;
   border-radius: 10px;
 }
 
 .project p {
   font-size: 40px;
+  text-align: center;
   color: #3e497a;
 }
 
