--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -24,9 +24,17 @@
 }
 
 .about .prompt {
+    font-family: 'Arial', sans-serif;
     width: 40%;
     font-size: 50px;
     color: aliceblue;
+}
+
+.prompt p {
+    font-family: 'Arial', sans-serif;
+    text-align: left;
+    line-height: 1.3;
+    margin: 20px;
 }
 
 .prompt svg {
