--- a/src/styles/ProjectDisplay.css
+++ b/src/styles/ProjectDisplay.css
@@ -9,12 +9,12 @@
 }
 
 .project h1 {
-  margin-top: 90px;
+  margin-top: 30px;
   color: #3e497a;
   font-size: 35px;
 }
 .project img {
-  width:100%;
+  width: 100px;
   display: flex;
   border-radius: 10px;
 }
