--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -68,9 +68,13 @@
 }
 
 @media only screen and (max-width: 600px) {
+    
+
     .about h2 {
         font-size: 40px;
+        background-color: #21325e;
     }
+    
 }
 
 .about .prompt {
